Fixed alignment issue and added about us content

--- a/css/style.scss
+++ b/css/style.scss
@@ -760,4 +760,12 @@ a:focus {
   }
 }
 
+.detail-box {
+    padding: 0px 25px;
+}
+
+.heading_container {
+    padding: 0px 25px;
+}
+
 // end footer section
